--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "react-typical": "^0.1.3",
+    "react-typist": "^2.0.5",
+    "react-typist-loop": "0.0.5",
+    "styled-components": "^5.2.3",
     "web-vitals": "^1.1.1"
   },
   "scripts": {
