--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^12.8.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-gallery-carousel": "^0.1.4",
     "react-reveal": "^1.2.2",
     "react-scripts": "4.0.3",
     "react-typical": "^0.1.3",
